Fix /searchLieferant
