# docs/swagger.json
@@ -155,7 +155,7 @@
                 "tags": [
                     "Purchase"
                 ],
-                "summary": "Returns all saved purchases with a similar vendor",
+                "summary": "Returns a list of vendors similar to a query",
                 "parameters": [
                     {
                         "type": "string",
@@ -171,7 +171,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Purchase"
+                                "type": "string"
                             }
                         }
                     }
